--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,41 +16,103 @@
       </div>
     </div>
   
-    <div class="row">
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div class="col-md-10 col-md-offset-1 dark-box">
+ 
+      <div class="row">
+        <div class="col-md-6">
+          <div class="embed-responsive embed-responsive-16by9 clearfix">
+            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
         </div>
-          Shere this link: <a href="https://player.vimeo.com/video/272852660">https://player.vimeo.com/video/320860659</a>
-      </div>
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  
+        <div class="col-md-6">
+          <h4>Short Overview Video for Marketing</h4>
+          <p>You can share this video in emails using this link:<br>
+          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/272852660</a><br>
+          <br>
+          You can share this video on LinkedIn using this link:<br>
+          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/272852660</a><br>
+          <hr>
+          Use this code to embed the video in a website:<br></p>
+          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+            <tbody>
+              <tr>
+                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/272852660" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320861285</a>
       </div>
-    </div>  
+      
+    <p>&nbsp;</p>
+    <hr>
+    <p>&nbsp;</p>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="embed-responsive embed-responsive-4by3 clearfix">
-          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+     
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Short Animated Video for Marketing</h4>
+          <p>You can share this video in emails using this link:<br>
+          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/320860659</a><br>
+          <br>
+          You can share this video on LinkedIn using this link:<br>
+          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/320860659</a>
+          <hr>
+          Use this code to embed the video in a website:<br></p>
+          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+            <tbody>
+              <tr>
+                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320860659" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>      
+        
+        <div class="col-md-6">
+          <div class="embed-responsive embed-responsive-16by9 clearfix">
+            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
         </div>
-        Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320860659</a>
       </div>
-      <div class="col-md-6">
-        <!--<div class="embed-responsive embed-responsive-4by3 clearfix">-->
-        <!--  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
-        <!--</div>-->
-        <!--Shere this link: <a href="https://player.vimeo.com/video/320860659" target="_Blank">https://player.vimeo.com/video/320861285</a>-->
+
+    <p>&nbsp;</p>
+    <hr>
+    <p>&nbsp;</p>
+      
+      <div class="row">
+        <div class="col-md-6">
+          <div class="embed-responsive embed-responsive-16by9 clearfix">
+            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+        </div>
+  
+        <div class="col-md-6">
+          <h4>Short Video for Marketing</h4>
+          <p>You can share this video in emails using this link:<br>
+          <a href="https://player.vimeo.com/video/247426096" target="_blank" style="">https://player.vimeo.com/video/320861285</a><br>
+          <br>
+          You can share this video on LinkedIn using this link:<br>
+          <a href="https://vimeo.com/247426096" target="_blank" style="">https://vimeo.com/320861285</a>
+          <hr>
+          Use this code to embed the video in a website:<br></p>
+          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+            <tbody>
+              <tr>
+                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320861285" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-
-    <p>&nbsp;</p>
+  
+  
+  
+  
+  
+  
+  
   
   </div>
   
