add marketing resources

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,28 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <h3>Accounts Payable Campaign Parameters</h3>
+        <p><strong>$10M Minimum AP Spend</strong></p>
+        <p>Target:  200+ Employees and $50M+ Revenue<br>
+        Titles: C-level & Director level Finance Execs (CFO and similar)</p>
+      </div>
+    </div>
+    
+<hr>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <h3>Marketing Resources</h3>
+        <ul>
+          <li><a href="cps_phone_script", class="btn btn-kontrol btn-lg">Zero Rejection Phone Script</a></li>
+          <li><a href="cps_email_to_meetings", class="btn btn-kontrol btn-lg">Email after Scheduling Meetings</a></li>
+          <li><a href="cps_email_sequence", class="btn btn-kontrol btn-lg">Email Sequence</a></li>
+        </ul>
+      </div>
+    </div>
+    
       
     <div class="row">
       <div class="col-md-8 col-md-offset-1">
