--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,10 @@
         <ul>
           <li><a href="cps_phone_script", class="btn btn-kontrol btn-lg">Zero Rejection Phone Script</a></li>
           <li><a href="cps_email_to_meetings", class="btn btn-kontrol btn-lg">Email after Scheduling Meetings</a></li>
+          <br>
+          <li><a href="https://pp.woodpecker.co/chris", class="btn btn-kontrol btn-lg">Cold Email Marketing</a> <em>(30 day free trial)</em></li>          
           <li><a href="cps_email_sequence", class="btn btn-kontrol btn-lg">Email Sequence</a></li>
+          
         </ul>
       </div>
     </div>
