--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,22 +18,30 @@
       </div>
     </div>
     
-<hr>
+    <hr>
 
+    <p>&nbsp;</p>
+    
     <div class="row">
-      <div class="col-md-8 col-md-offset-1">
+      <div class="col-md-5 col-md-offset-1">
         <h3>Marketing Resources</h3>
         <ul>
-          <li><a href="cps_phone_script", class="btn btn-kontrol btn-lg">Zero Rejection Phone Script</a></li>
-          <li><a href="cps_email_to_meetings", class="btn btn-kontrol btn-lg">Email after Scheduling Meetings</a></li>
-          <br>
-          <li><a href="https://pp.woodpecker.co/chris", class="btn btn-kontrol btn-lg">Cold Email Marketing</a> <em>(30 day free trial)</em></li>          
-          <li><a href="cps_email_sequence", class="btn btn-kontrol btn-lg">Email Sequence</a></li>
-          
+          <li><a href="cps_phone_script">Zero Rejection Cold Call Script</a></li>
+          <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>
+          <li><a href="cps_email_sequence">Email Sequence</a> (use with Woodpecker)</li>
+        </ul>
+      </div>
+      <div class="col-md-5">
+        <h3>Marketing Tools</h3>
+        <ul>
+          <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>
+          <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   
+          <li><a href="https://www.uberconference.com/screensharing">Best Tool for Sharing Your Screen</a> <em>(no downloads needed)</em></li> 
         </ul>
       </div>
     </div>
     
+    <p>&nbsp;</p>
       
     <div class="row">
       <div class="col-md-8 col-md-offset-1">
