--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,20 +12,19 @@
         <%= f.input :advisor_phone, label: 'Phone'  %>
         <%= f.input :advisor_mobile, label: 'Mobile'  %>
         <%= f.input :email, required: true, autofocus: true %>
-        <%#= f.input :mailing_address, label: 'Mailing Address'  %>
-        <%#= f.input :apt_suite, label: 'Apt/Suite #'  %>
-        <%#= f.input :city, label: 'City'  %>
-        <%#= f.input :state, collection: STATES %>
-        <%#= f.input :zip, label: 'ZipCode'  %>
+
+        <%= f.input :mailing_address, label: 'Mailing Address' %>
+        <%= f.input :apt_suite, label: 'Apt/Suite #' %>
+        
+        <%= f.input :city, label: 'City' %>
+        <%= f.input :state, collection: STATES %>
+        <%= f.input :zip, label: 'ZipCode' %>
+
         <%= f.input :password, autocomplete: "off", required: false %>
         <%= f.input :password_confirmation %>
 
         <% if current_user.admin || current_user.manager %>        
           <%= f.input :group, required: true %>
-        <% end %>
-
-        <% if current_user.admin || [current_user.manager && current_user.support] %>        
-          SWAT&#63; <%= f.check_box :bc_swat? %> &nbsp; | &nbsp; 
         <% end %>
 
         <% if current_user.admin %>
