--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.manager || current_user.support %>
+<% if current_user.manager || current_user.support || (current_user.user_code == @user.group) %>
 
   <div class="col-md-4 col-md-offset-4">
   	<div class="panel panel-gray">
@@ -35,7 +35,9 @@
     	<div class="panel-footer">
     		<div class="links center">
     			<%= link_to "Back", users_path, class: "btn btn-beige" %> &nbsp;&nbsp;
-    			<%= link_to "Edit User", edit_user_path(@user), class: "btn btn-warning" %>
+    			<% if current_user.manager || current_user.support %>
+    		  	<%= link_to "Edit User", edit_user_path(@user), class: "btn btn-warning" %>
+  		  	<% end %>
           <%#= link_to "Delete User", user_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger" %>
     		</div>
        </div>
@@ -44,7 +46,7 @@
   </div>
 
 
-<% if current_user.manager %>
+<% if current_user.manager || current_user.support || (current_user.user_code == @user.group) %>
 
 <div class="col-md-12">
   <p>&nbsp;</p>
