Add notes to Users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,9 @@
           <tr>
 			      <td>Agreement Date: </td><td> &nbsp; </td><td><%= @user.created_at.strftime("%m/%d/%Y") %></td>               
           </tr>
+          <tr>
+			      <td>Notes: </td><td> &nbsp; </td><td><%= @user.notes %></td>               
+          </tr>
 
         </table>
       </div>
