--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,16 +22,14 @@
 
         <%= f.input :password, autocomplete: "off", required: false %>
         <%= f.input :password_confirmation %>
+        <em>Notes entered below are not visible to users.</em>
+        <%= f.input :notes %>
 
-        <% if current_user.admin || current_user.manager %>        
+        <% if current_user.admin %>        
           <%= f.input :group, required: true %>
-        <% end %>
-        
-        <% if current_user.admin || current_user.manager %>        
+      
           <%= f.input :user_code, required: true %>
-        <% end %>
 
-        <% if current_user.admin %>
           Admin&#63; <%= f.check_box :admin? %> &nbsp; | &nbsp; Manager&#63; <%= f.check_box :manager? %> &nbsp; | &nbsp; Support&#63; <%= f.check_box :support? %> | &nbsp;  Agree&#63; <%= f.check_box :agree? %>
         <% end %>
         
