user index column header titles

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,12 +32,12 @@
             <tr>
               <th class="th-left">Name</th>
               <th>Last Logged In</th>
-              <th>Prospects</th>
+              <th>Prospects in CRM</th>
               <% if current_user.manager || current_user.support %>
-                <th>Group</th>
-                <th>Admin</th>
-                <th>Manager</th>
-                <th>Support</th>
+                <th>Aspire<br>Manager</th>
+                <th>CRM<br>Admin</th>
+                <th>CRM<br>Manager</th>
+                <th>CRM</br></CRM>Support</th>
               <% end %>
             </tr>
           </thead>
