fix user index comumn header

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,7 +37,7 @@
                 <th>Aspire<br>Manager</th>
                 <th>CRM<br>Admin</th>
                 <th>CRM<br>Manager</th>
-                <th>CRM</br></CRM>Support</th>
+                <th>CRM</br>Support</th>
               <% end %>
             </tr>
           </thead>
