--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -126,7 +126,7 @@
       
       <p align="text-align:justify">Aspire's Partner provides Commercial Payment Services that reduce an organizations AP operating expenses, saving them time and money, and generates revenue when paying their suppliers and vendors. Aspire shall pay REFERRAL PARTNER a “Revenue Share” based on the aggregate volume of Referred End Users’ Accounts Payable spend through Virtual Card Payments.<br>
       
-      <br>Standard Transactions are defined as Visa and MasterCard Corporate Standard or Corporate Data Rate I. For all Standard Transactions for End Users, Aspire shall pay REFERRAL PARTNER a Revenue Share of .10% (10 BPS) for each such transaction where client is paid no more than 1.5% (150 BPS).  This amounnt would be reduced in the event that a client is to be paid more than 1.5% (150 BPS).<br>
+      <br>Standard Transactions are defined as Visa and MasterCard Corporate Standard or Corporate Data Rate I. For all Standard Transactions for End Users, Aspire shall pay REFERRAL PARTNER a Revenue Share of .10% (10 BPS) for each such transaction where client is paid no more than 1.5% (150 BPS).  This amount would be reduced in the event that a client is to be paid more than 1.5% (150 BPS).<br>
       
       <br>Non-Standard Transactions include, but are not limited to, Enhanced Data transactions, Large Ticket transactions, foreign transactions. For all transactions for End Users that do not qualify as Standard Transactions (“Non-Standard Transactions”), Aspire shall pay REFERRAL PARTNER a Revenue Share of .05% (5 BPS) for each such transaction.<br>
       
