--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,13 +30,18 @@
           <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>
           <li><a href="cps_email_sequence">Email Sequence</a> (use with Woodpecker)</li>
         </ul>
-      </div>
-      <div class="col-md-5">
         <h3>Marketing Tools</h3>
         <ul>
           <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>
           <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   
           <li><a href="https://www.uberconference.com/screensharing">Best Tool for Sharing Your Screen</a> <em>(no downloads needed)</em></li> 
+        </ul>        
+      </div>
+      <div class="col-md-5">
+        <h3>Sales Tools</h3>
+        <ul>
+          <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
+          <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
         </ul>
       </div>
     </div>
