static page add brochure

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
         <ul>
           <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
           <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
-          <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
+          <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
         </ul>
       </div>
     </div>
