--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 	  	
 	  	<div class="row">
 	  		<div class="col-md-6">
-          <h4>Listing <%= User.count %> Users</h4>
+          <h4>Listing <%= @users.count %> Users</h4>
 	  		</div>
 	  		<div class="col-md-4">
       		<%= form_tag(users_path, :method => "get", id: "search-form") do %>
