--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -45,7 +45,7 @@
         <h3>Schedule Presentation</h3>
         <% if current_user.group == "rs" || current_user.group == "ne" || current_user.group == "ls" || current_user.group == "ac" %>
           <p><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></p>
-        <% elsif current_user.group == "se" || current_user.group == "cn" || current_user.group == "cc" %>
+        <% elsif current_user.group == "se" || current_user.group == "cn" || current_user.group == "cc" || current_user.user_code == "cc" %>
           <p><a href="https://calendly.com/priority-jason/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></p>
         <% else %>
           <p><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation with Greg McCarthy</a></p>
