remove hcs and pay from edit more

--- a/app/views/prospects/edit.html.erb
+++ b/app/views/prospects/edit.html.erb
@@ -61,13 +61,13 @@
   			</div>
   			<%= f.input :prospect_note, label: "Notes" %>
 
-        <br>
-        <hr>
-	      <%= render 'prospects/edit_cps', f: f %>
+       <!-- <br>-->
+       <!-- <hr>-->
+	      <%#= render 'prospects/edit_cps', f: f %>
 
-        <br>
-        <hr>
-	      <%= render 'prospects/edit_hcs', f: f %>
+       <!-- <br>-->
+       <!-- <hr>-->
+	      <%#= render 'prospects/edit_hcs', f: f %>
 
 
     	</div>
