--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,173 +1,164 @@
+<div class="container pages">
 
-<%# if current_user.group == "bc" || current_user.group == "all" %>
-  
-  <div class="container pages">
-
-    <div class="row">
-      <div class="col-md-8 col-md-offset-1">
-        <h3>Accounts Payable Campaign Parameters</h3>
-        <p><strong>$10M Minimum AP Spend</strong></p>
-        <p>Target:  200+ Employees and $50M+ Revenue<br>
-        Titles: C-level & Director level Finance Execs (CFO and similar)</p>
-      </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-1">
+      <h3>Accounts Payable Campaign Parameters</h3>
+      <p><strong>$10M Minimum AP Spend</strong></p>
+      <p>Target:  200+ Employees and $50M+ Revenue<br>
+      Titles: C-level & Director level Finance Execs (CFO and similar)</p>
     </div>
-    
-    <hr>
-
-    <p>&nbsp;</p>
-    
-    <div class="row">
-      <!--<div class="col-md-5 col-md-offset-1">-->
-      <!--  <h3>Marketing Resources</h3>-->
-      <!--  <ul>-->
-      <!--    <li><a href="cps_phone_script">Zero Rejection Cold Call Script</a></li>-->
-      <!--    <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>-->
-      <!--    <li><a href="cps_email_sequence">Email Sequence</a> (use with Woodpecker)</li>-->
-      <!--  </ul>-->
-      <!--  <h3>Marketing Tools</h3>-->
-      <!--  <ul>-->
-      <!--    <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>-->
-      <!--    <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   -->
-      <!--    <li><a href="https://www.uberconference.com/screensharing">Best Tool for Sharing Your Screen</a> <em>(no downloads needed)</em></li> -->
-      <!--  </ul>-->
-      <!--</div>-->
-      
-      <div class="col-md-5 col-md-offset-1">
-        <h3>Sales Tools</h3>
-        <ul>
-          <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
-          <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
-          <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
-        </ul>
-      </div>
-      
-      <div class="col-md-5">
-        <h3>Schedule Presentation</h3>
-        <ul>
-          <% if current_user.group == "rs" || current_user.group == "ne" || current_user.group == "ls" || current_user.group == "ac" || 
-            current_user.user_code == "rs" || current_user.user_code == "ne" || current_user.user_code == "ls" || current_user.user_code == "ac" %>
-            <li><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></li>
-          <% elsif current_user.group == "se" || current_user.group == "cn" || current_user.group == "cc" || 
-                current_user.user_code == "se" || current_user.user_code == "cn" ||current_user.user_code == "cc" %>
-            <li><a href="https://calendly.com/priority-jason/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></li>
-          <% else %>
-            <li><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation with Greg McCarthy</a></li>
-            <li><a href="https://calendly.com/priority-jason/cpx" target="_Top">Schedule a presentation with Jason Arp</a></li>
-          <% end %>
-        </ul>
-      </div>
-    
-    </div>
-    
-    <p>&nbsp;</p>
-      
-    <div class="row">
-      <div class="col-md-8 col-md-offset-1">
-        <h3>Marketing Videos</h3>
-      </div>
-    </div>
-  
-      <div class="col-md-10 col-md-offset-1 dark-box">
- 
-      <div class="row">
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-  
-        <div class="col-md-6">
-          <h4>Short Overview Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/272852660</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/272852660</a><br>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/272852660" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      
-    <p>&nbsp;</p>
-    <hr>
-    <p>&nbsp;</p>
-
-     
-      <div class="row">
-        <div class="col-md-6">
-          <h4>Short Animated Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/320860659</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/320860659</a>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320860659" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>      
-        
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-
-    <p>&nbsp;</p>
-    <hr>
-    <p>&nbsp;</p>
-      
-      <div class="row">
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9 clearfix">
-            <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-  
-        <div class="col-md-6">
-          <h4>Short Video for Marketing</h4>
-          <p>You can share this video in emails using this link:<br>
-          <a href="https://player.vimeo.com/video/247426096" target="_blank" style="">https://player.vimeo.com/video/320861285</a><br>
-          <br>
-          You can share this video on LinkedIn using this link:<br>
-          <a href="https://vimeo.com/247426096" target="_blank" style="">https://vimeo.com/320861285</a>
-          <hr>
-          Use this code to embed the video in a website:<br></p>
-          <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
-            <tbody>
-              <tr>
-                <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320861285" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
   </div>
   
+  <hr>
 
-<%# else %>
-  <!--Wrong Group-->
-<%# end %>
+  <p>&nbsp;</p>
+
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+      <h3>Sales Tools</h3>
+      <ul>
+        <li><a href="http://aspirepartners.co/crm_docs/high_level_intro_presentation.pptx">High Level Intro Presentation PPT</a> <em>(with script in presenter notes)</em></li>
+        <li><a href="http://aspirepartners.co/crm_docs/High_Level_Intro_Presentation_Script.docx">High Level Intro Presentation SCRIPT</a></li>
+        <li><a href="http://aspirepartners.co/crm_docs/CPX-TheCompleteCommercialPaymentsSolution.pdf" target="_New">CPX - Complete Commercial Payments Solution BROCHURE</a></li>
+      </ul>
+    </div>
+  
+    <div class="col-md-5">
+      <h3>Schedule Presentation</h3>
+      <ul>
+        <% if current_user.group == "rs" || current_user.group == "ne" || current_user.group == "ls" || current_user.group == "ac" || 
+          current_user.user_code == "rs" || current_user.user_code == "ne" || current_user.user_code == "ls" || current_user.user_code == "ac" %>
+          <li><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></li>
+        <% elsif current_user.group == "se" || current_user.group == "cn" || current_user.group == "cc" || 
+              current_user.user_code == "se" || current_user.user_code == "cn" ||current_user.user_code == "cc" %>
+          <li><a href="https://calendly.com/priority-jason/cpx" target="_Top">Schedule a presentation for your client with an expert at Priority Commercial Payments</a></li>
+        <% else %>
+          <li><a href="https://calendly.com/priority-greg/cpx" target="_Top">Schedule a presentation with Greg McCarthy</a></li>
+          <li><a href="https://calendly.com/priority-jason/cpx" target="_Top">Schedule a presentation with Jason Arp</a></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+
+  <p>&nbsp;</p>
+
+  <% if current_user.group == "cc" || current_user.user_code == "cc" %>    
+    <div class="row">
+      <div class="col-md-5 col-md-offset-1">
+        <h3>Marketing Resources</h3>
+        <ul>
+          <li><a href="cps_phone_script">Zero Rejection Cold Call Script</a></li>
+          <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>
+          <li><a href="cps_email_sequence">Email Sequence</a> (use with Woodpecker)</li>
+        </ul>
+      </div>
+      
+      <div class="col-md-5">        
+        <h3>Marketing Tools</h3>
+        <ul>
+          <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>
+          <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   
+          <li><a href="https://www.uberconference.com/screensharing">Best Tool for Sharing Your Screen</a> <em>(no downloads needed)</em></li> 
+        </ul>
+      </div>
+    </div>
+    <p>&nbsp;</p>
+  <% end %>
+
+    
+  <div class="row">
+    <div class="col-md-8 col-md-offset-1">
+      <h3>Marketing Videos</h3>
+    </div>
+  </div>
+
+  <div class="col-md-10 col-md-offset-1 dark-box">
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/272852660" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <h4>Short Overview Video for Marketing</h4>
+        <p>You can share this video in emails using this link:<br>
+        <a href="https://player.vimeo.com/video/272852660" target="_blank" style="">https://player.vimeo.com/video/272852660</a><br>
+        <br>
+        You can share this video on LinkedIn using this link:<br>
+        <a href="https://vimeo.com/272852660" target="_blank" style="">https://vimeo.com/272852660</a><br>
+        <hr>
+        Use this code to embed the video in a website:<br></p>
+        <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+          <tbody>
+            <tr>
+              <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/272852660" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+    <p>&nbsp;</p>
+    <hr>
+    <p>&nbsp;</p>
+
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Short Animated Video for Marketing</h4>
+        <p>You can share this video in emails using this link:<br>
+        <a href="https://player.vimeo.com/video/320860659" target="_blank" style="">https://player.vimeo.com/video/320860659</a><br>
+        <br>
+        You can share this video on LinkedIn using this link:<br>
+        <a href="https://vimeo.com/320860659" target="_blank" style="">https://vimeo.com/320860659</a>
+        <hr>
+        Use this code to embed the video in a website:<br></p>
+        <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+          <tbody>
+            <tr>
+              <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320860659" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>      
+      
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320860659" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <p>&nbsp;</p>
+    <hr>
+    <p>&nbsp;</p>
+    
+    <div class="row">
+      <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9 clearfix">
+          <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/320861285" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <h4>Short Video for Marketing</h4>
+        <p>You can share this video in emails using this link:<br>
+        <a href="https://player.vimeo.com/video/320861285" target="_blank" style="">https://player.vimeo.com/video/320861285</a><br>
+        <br>
+        You can share this video on LinkedIn using this link:<br>
+        <a href="https://vimeo.com/320861285" target="_blank" style="">https://vimeo.com/320861285</a>
+        <hr>
+        Use this code to embed the video in a website:<br></p>
+        <table width="99%" cellpadding="10" cellspacing="0" watable="1" class="contStyleExcSimpleTable" style="border-collapse: collapse; border-style: solid; border-width: 1px; border-color: #999999;" bgcolor="#D3D3D3">
+          <tbody>
+            <tr>
+              <td style="border-style: solid; border-width: 1px; border-color: gray; background-color: #ffffff;" valign="top"><font color="#000000">&lt;iframe src="https://player.vimeo.com/video/320861285" height="300" width="550" webkitAllowFullScreen allowFullScreen mozallowfullscreen frameborder="0"&gt;&lt;/iframe&gt;</font></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
