remove required status

--- a/app/views/prospects/_edit_hcs.html.erb
+++ b/app/views/prospects/_edit_hcs.html.erb
@@ -1,7 +1,6 @@
   		<div class="row">
         <div class="col-md-4">
-      		<%= f.input :hcs_status, required: true, include_blank: false, include_hidden: false,
-			            collection: [
+      		<%= f.input :hcs_status, collection: [
             									'Intro Presentation Scheduled',
             									'SME Presentation Scheduled',
             									'Waiting for Claims Data',
