--- a/app/views/pages/marketing.html.erb
+++ b/app/views/pages/marketing.html.erb
@@ -1,2 +1,28 @@
-<h1>Pages#marketing</h1>
-<p>Find me in app/views/pages/marketing.html.erb</p>
+<div class="container pages">
+
+  <p>&nbsp;</p>
+  
+  <% if current_user.group == "cc" || current_user.user_code == "cc" %>  
+  
+    <div class="row">
+      <div class="col-md-5 col-md-offset-1">
+        <h3>Marketing Resources</h3>
+        <ul>
+          <li><a href="cps_phone_script">Zero Rejection Cold Call Script</a></li>
+          <li><a href="cps_email_to_meetings">Send Email after Scheduling Meetings</a> (use with cold call script)</li>
+          <li><a href="cps_email_sequence">Email Sequence</a> (use with Woodpecker)</li>
+        </ul>
+      </div>
+      <div class="col-md-5">
+        <h3>Marketing Tools</h3>
+        <ul>
+          <li><a href="https://linkedhelper.com">Automate LinkedIn Marketing w/LinkedIn Helper</a> <em>($15 per month)</em></li>
+          <li><a href="https://pp.woodpecker.co/chris">Automate Cold Email Marketing w/Woodpecker</a> <em>(30 day free trial)</em></li>   
+          <li><a href="https://www.uberconference.com/screensharing">Best Tool for Sharing Your Screen</a> <em>(no downloads needed)</em></li> 
+        </ul>        
+      </div>
+    </div>
+
+  <% end %>
+
+</div>
