--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -148,7 +148,7 @@
         <div class="col-md-10 col-md-offset-1">
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= f.error_notification %>
-          <%= f.input :group, as: :hidden, input_html: {value: @group_id} %>
+          <%= f.input :group, as: :hidden, input_html: {value: @group_id, name: 'group'} %>
           <div class="form-inputs">
             <h3 align="center"><%= f.input :agree, label: 'I Agree' %></h3>
             <div class="row">
