add name to email fix password reset

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -70,6 +70,8 @@
       </div>
 
     </div>
-		<div class="panel-footer"><p align="center"><em></em></p></div>        
+		<div class="panel-footer">
+		  <p align="center"><%= link_to "Send Email to All", group_message_path, class: "btn btn-beige btn-sm" %></p>
+		</div>        
 
   </div>
