--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,36 @@
-<h2>Change your password</h2>
+<div class="col-md-4 col-md-offset-4">
+	<div class="panel panel-gray">
+	  <div class="panel-heading">
+      <h4>Reset Your Password</h4>
+	  </div>
+	  <div class="prospect-show">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+          <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+            <%= f.error_notification %>
+          
+            <%= f.input :reset_password_token, as: :hidden %>
+            <%= f.full_error :reset_password_token %>
+          
+            <div class="form-inputs">
+              <%= f.input :password, label: "New password", required: true, autofocus: true %>
+              <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+            </div>
 
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
-
-  <div class="form-inputs">
-    <%= f.input :password, label: "New password", required: true, autofocus: true %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+        </div>
+      </div>
+    </div>
+    <div class="panel-footer">
+     <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="form-actions">
+            <%= f.button :submit, "Change my password", class:"btn btn-slate btn-block" %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
