--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,32 @@
-<h2>Forgot your password?</h2>
+<div class="col-md-4 col-md-offset-4">
+	<div class="panel panel-gray">
+	  <div class="panel-heading">
+      <h4>Send Password Reset</h4>
+	  </div>
+	  <div class="prospect-show">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+          <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= f.error_notification %>
+        
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true %>
+          </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+        </div>
+      </div>
+    </div>
+    <div class="panel-footer">
+     <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="form-actions">
+            <%= f.button :submit, "Send me reset password instructions", class:"btn btn-slate btn-block" %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
