--- a/app/views/users/group_message.html.erb
+++ b/app/views/users/group_message.html.erb
@@ -15,8 +15,9 @@
         </div>
     </div>
     <div class="panel-footer">
-      <div class="form-actions">
-        <%= submit_tag "submit",:value => "submit", class:"btn btn-slate btn-block" %>
+      <div class="form-actions center">
+        <em>Warning: Upon submission, an email will be sent to all agents.</em>
+        <%= submit_tag "submit",:value => "Send Email Now", class:"btn btn-danger btn-block" %>
       </div>
       <% end %>
 
